# tdd-project

./: .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml
store/: main.py
store/core/: config.py  exceptions.py
store/db/: mongo.py
store/models/: product.py
store/schemas/: __init__.py  product.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/schemas/: factories.py  test_product.py
tests/usecases/: test_product.py
